--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                     <tr><td>3</td><td>Damrongkiat</td><td>Bangkok</td></tr>
                 </tbody>
                 </table>
-                <img src="bingo.jpg" width=“200" alt="แมวส้มขาสั้น" height="200"> 
+                <img src="bingo.jpg" width="200" alt="แมวส้มขาสั้น" height="200"> 
                 <img src="bingo.jpg" class="rounded" alt="แมวส้มขาสั้น" width="200" height="200"> 
                 <img src="bingo.jpg" class="rounded-circle" alt="แมวส้มขาสั้น" width="200" height="200"> 
                 <img src="bingo.jpg" class="img-thumbnail" alt="แมวส้มขาสั้น" width="200" height="200"> 
+                <button type="button" class="btn"link href="form.html">Form</button>
 
                 <div class="container mt-3">
                     <h2>Contextual Colors</h2>
